--- a/main_v2.ipynb
+++ b/main_v2.ipynb
@@ -406,6 +406,16 @@
    "source": [
     "show_predict_result(trainer, test_dataset, test_y, labels_task_1)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " F1 - micro là tổng quan của F1-score cho tất cả các lớp\n",
+    " F1 - macro là trung bình của F1-score của các lớp riêng lẻ. \n",
+    " Accuracy là tỷ lệ dự đoán chính xác trên toàn bộ tập dữ liệu kiểm tra. Kết quả này cho thấy mô hình có hiệu suất tương đối tốt trong việc dự đoán nhãn trên tập dữ liệu kiểm tra."
+   ]
   }
  ],
  "metadata": {
